# Kima

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .hspec  Disambiguate.hs  Kima.cabal  LICENSE  README.md  README.org  azure-pipelines.yml  hie.yaml  stack.yaml
app/: ArgumentParser.hs  Main.hs  Repl.hs  Runners.hs
docs/: closures.als  reference.org  spec.org
examples/: binary_operations.k  calls.k  hoisting.k  local_shadowing_fails.k  print.k
src/: AST.hs  ArgumentParser.hs  CommonTypes.hs  Debug.hs  Debugging.hs  Frontend.hs  Interface.hs  Interpreter.hs  Kima.hs  KimaTypes.hs  Main.hs  Typechecking.hs
src/AST/: Common.hs  Desugared.hs  Expression.hs  Parsed.hs  Statement.hs  Typed.hs
src/Control/Monad/State/: Extended.hs
src/Data/: Newtype.hs
src/Data/Comp/Algebra/: Combine.hs
src/Data/IORef/: Class.hs
src/Frontend/: BaseTypes.hs  Parser.hs  Tokenizer.hs  Types.hs
src/Interface/: ArgumentParser.hs  Debugging.hs  Errors.hs  Runners.hs  Types.hs
src/Interpreter/: Builtins.hs  Interpreter.hs  Monad.hs  Types.hs
src/Kima/: *kima*  AST.hs  Builtins.hs  Desugar.hs  Effects.hs  Frontend.hs  Interface.hs  Interpreter.hs  KimaTypes.hs  Syntax.hs  TypeVars.hs  Typechecking.hs  Types.hs  Util.hs
src/Kima/AST/: AST.hs  Common.hs  Desugared.hs  Effects.hs  Expression.hs  Kinds.hs  Names.hs  Parsed.hs  Stages.hs  Statement.hs  Typed.hs  Types.hs
src/Kima/Builtins/: Types.hs  Values.hs
src/Kima/Control/Monad/State/: Extended.hs
src/Kima/Effects/: Check.hs
src/Kima/Frontend/: Parser.hs  Tokenizer.hs  Types.hs
src/Kima/Interface/: ArgumentParser.hs  Monad.hs  Repl.hs  Runners.hs  Transform.hs  Types.hs
src/Kima/Interpreter/: Builtins.hs  Interpreter.hs  Monad.hs  Types.hs
src/Kima/Syntax/: Parser.hs  Tokenizer.hs  Types.hs
src/Kima/Typechecking/: Bidirectional.hs  Builtins.hs  Check.hs  ConstraintGen.hs  ConstraintSolving.hs  Constraints.hs  DomainCalculation.hs  Errors.hs  Monad.hs  TypeCalculation.hs  TypeCtx.hs  TypeResolution.hs  Types.hs
src/Kima/Types/: Bidirectional.hs  Errors.hs  TypeCtx.hs  TypeResolution.hs
src/Typechecking/: BaseTypes.hs  Builtins.hs  Check.hs  Monad.hs  Types.hs
test/: Errors.hs  FileTests.hs  Interpreters.hs  Main.hs  Test.hs  XmlFormatter.hs
test/Kima/Test/: ConstraintSolver.hs  DomainCalculation.hs  Errors.hs  FileTests.hs  Gen.hs  Interpreters.hs  Parser.hs  XmlFormatter.hs
test/Test/: ConstraintSolver.hs  FileTests.hs  Gen.hs
test/src/: assign_to_const.k  calls.k  data_declaration_hoisting.k  declarations.k  if1.k  if2.k  invalid_argument.k  modify_field_correctly.k  modify_subfield.k  modify_subfield_correctly.k  multiple_declarations1.k  mutation.k  mutation2.k  mutation3.k  mutation4.k  product_type1.k  product_type2.k
test/src/builtin_function/: at.k  equality.k  length.k  stringEquality.k
test/src/builtin_function/IO/: echo.k  print_bool.k  print_float.k  print_int.k  print_string.k
test/src/builtin_function/arithmetic/floating/: divide_float_float.k  divide_float_int.k  divide_int_float.k  minus_float_float.k  minus_float_int.k  minus_int_float.k  multiply_float_float.k  multiply_float_int.k  multiply_int_float.k  plus_float_float.k  plus_float_int.k  plus_int_float.k  power_float_float.k  power_float_int.k  power_int_float.k
test/src/builtin_function/arithmetic/integer/: divide.k  minus.k  multiply.k  plus.k  power.k
test/src/closures/: capture_argument.k  currying.k  dont_modify_calling_environment.k  modifiable_closure_persists.k  modify_captured.k  one_function_multiple_closures.k
test/src/control_flow/: if_false.k  if_true.k  nested_if.k  one_way_if_false.k  one_way_if_true.k  while.k
test/src/effects/: aliasShadowingIllegal.k  checkEffectArguments.k  combineEffectsInSignature.k  customEffectFromOtherEffect.k  customEffectFromPure.k  declareCustomEffect.k  declareCustomEffectWithArgs.k  declareEffectSynonym.k  effectfulClosure.k  inputFromPure.k  ioInMain.k  ioprint_fail.k  overloadOperation.k  printFromPure.k  useCustomEffect.k  useCustomEffect2Levels.k  useCustomEffectWithArgs.k  useEffectSynonym.k  useEffectSynonymPartly.k  useNonExistentEffect.k
test/src/effects/handlers/: breakOutsideHandler.k  breakWithResult.k  breakWithResultTypeError.k  failEffect.k  handleMultipleOps.k  handleNonExistentOp.k  handleSingleOp.k  incompleteHandle.k  overzealousHandle.k  stateEffect.k  surroundingEffectFromHandler.k  useHandledEffectFromHandler.k
test/src/hoisting/: data_declarations.k  function.k
test/src/inference/: ambiguous_inference.k  data_field_types_required.k  let_function.k  let_function_missing_return.k  var_function.k
test/src/mutability/: assign_to_const.k  modify_field_correctly.k  mutation1.k  mutation2.k  mutation3.k  mutation4.k
test/src/overloading/: argument_number_overload.k  argument_overloading.k  return_type_overloading.k  return_type_overloading_nested.k
test/src/product_types/: modify_field.k  modify_subfield.k  modify_subfield_correctly.k  product_type1.k
test/src/recursion/: count_to_zero.k  factorial.k  fibonacci.k
test/src/redeclaration/: multiple_declarations5.k
test/src/shadowing/: let_change_type.k  let_let.k  let_var.k  local_function.k  names_dont_shadow_accessors.k  var-let.k  var_change_type.k
test/src/sum_types/: enum.k  nested_patterns1.k  nested_patterns2.k  nested_patterns3.k  variant.k  wrong_constructor.k
