cabal-version: >=1.10
name: Kima
version: 0.1.0.0
license: MIT
license-file: LICENSE
copyright: 2018 Michail Pardalos
maintainer: mpardalos@gmail.com
author: Michail Pardalos
homepage: https://github.com/githubuser/Kima#readme
category: ProgrammingLanguage
build-type: Simple
extra-source-files:
    README.md

library
    default-language: Haskell2010
    ghc-options: -Wall -Wno-missing-signatures -fdefer-typed-holes
    hs-source-dirs: src
    exposed-modules:
        Control.Monad.State.Extended
        Data.IORef.Class

        Kima

        Kima.AST
        Kima.AST.AST
        Kima.AST.Kinds
        Kima.AST.Names
        Kima.AST.Stages
        Kima.AST.Types

        Kima.Builtins

        Kima.Desugar

        Kima.Syntax
        Kima.Syntax.Types
        Kima.Syntax.Tokenizer
        Kima.Syntax.Parser

        Kima.Types
        Kima.Types.Bidirectional
        Kima.Types.Errors
        Kima.Types.TypeCtx
        Kima.Types.TypeResolution

        Kima.Interpreter
        Kima.Interpreter.Types
        Kima.Interpreter.Interpreter

        Kima.Interface
        Kima.Interface.Transform
        Kima.Interface.Monad
    default-extensions: BangPatterns ConstraintKinds DataKinds
                        DefaultSignatures DeriveFunctor DeriveGeneric DeriveTraversable
                        DuplicateRecordFields ExistentialQuantification FlexibleContexts
                        FlexibleInstances FunctionalDependencies GADTs
                        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
                        LiberalTypeSynonyms MultiParamTypeClasses NamedFieldPuns
                        OverloadedStrings PartialTypeSignatures PatternSynonyms
                        ViewPatterns RankNTypes ScopedTypeVariables StandaloneDeriving
                        TemplateHaskell TypeApplications TypeFamilies TypeInType
                        TypeOperators UndecidableInstances EmptyCase TupleSections
    ghc-options: -Wall -Wno-missing-signatures -fdefer-typed-holes
    build-depends:
        base >=4.7 && <5,
        containers -any,
        megaparsec ==7.*,
        mtl -any,
        parser-combinators ==1.*,
        prettyprinter == 1.2.*,
        safe -any

test-suite spec
    type: exitcode-stdio-1.0
    main-is: Main.hs
    other-modules:
        Kima.Test.XmlFormatter
        Kima.Test.Interpreters

        Kima.Test.FileTests
        Kima.Test.Parser
    hs-source-dirs: test
    ghc-options: -Wall -fdefer-typed-holes
    default-extensions:
        DeriveFunctor, DeriveGeneric, DerivingStrategies,
        GeneralizedNewtypeDeriving, ExistentialQuantification, DataKinds,
        LambdaCase, TypeApplications, BangPatterns, NamedFieldPuns,
        FlexibleInstances, GADTs, ViewPatterns, NoMonomorphismRestriction,
        ScopedTypeVariables, FlexibleContexts, DefaultSignatures,
        UndecidableInstances, TupleSections
    build-depends:
        base >=4.7 && <5,
        containers -any,
        directory -any,
        hspec == 2.*,
        hspec-core == 2.*,
        generic-random == 1.* && >= 1.2,
        QuickCheck >= 2,
        mtl -any,
        megaparsec ==7.*,
        prettyprinter == 1.2.*,
        safe -any,
        directory-tree == 0.12.*,
        filepath == 1.4.*,
        Kima

executable kima
    default-language: Haskell2010
    main-is: Main.hs
    other-modules:
        Repl
        ArgumentParser
        Runners
    hs-source-dirs: app
    default-extensions: BangPatterns ConstraintKinds DataKinds
                        DefaultSignatures DeriveFunctor DeriveGeneric DeriveTraversable
                        DuplicateRecordFields ExistentialQuantification FlexibleContexts
                        FlexibleInstances FunctionalDependencies GADTs
                        GeneralizedNewtypeDeriving InstanceSigs KindSignatures LambdaCase
                        LiberalTypeSynonyms MultiParamTypeClasses NamedFieldPuns
                        OverloadedStrings PartialTypeSignatures RankNTypes
                        ScopedTypeVariables StandaloneDeriving TemplateHaskell
                        TypeApplications TypeFamilies TypeInType TypeOperators
                        UndecidableInstances EmptyCase
    build-depends:
        base >=4.7 && <5,
        Kima -any,
        haskeline == 0.7.*,
        megaparsec ==7.*,
        mtl -any,
        optparse-applicative -any,
        prettyprinter == 1.2.*,
        safe -any
